--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="front-page" id="frontPage" onclick="openCard()">
-    <img src="Tło/tloTekst.png" class="tlo">
+    <img src="tloTekst.png" class="tlo">
 </div>
 
   <div class="card" id="card" style="display: none;" onclick="closeCard()">
@@ -17,25 +17,25 @@
     <p>W dniu twoich dziewietnastych urodzin</p>
     <p>Chciałbym ci życzyć przedewszystkim dużo zdrowia,</p>
     <p>Pieniedzy, żebyśmy mogli sobie podróżować razem,</p>
-    <p>Sukcesów, zarówno tych na uczelni jak i nie tylko</p>
+    <p>Sukcesów, zarówno tych na uczelni jak i nie tylko,</p>
     <p>Ogromnej ilości Lego, bo Lego jest cudowne i kropka,</p>
     <p>Żeby Gilbercik nasz kochany dalej był kochany i bardziej posłuszny,</p>
     <p>I najważniejsze, jak nawiecej czasu ze swoim ukochanym (czyli ze mną)</p>
     <br>
     
     <div class="zjecia">
-        <img class="mySlides" src="Zdjecia/calowanko.jpg" style="width:100%">
-        <img class="mySlides" src="Zdjecia/spanko.jpeg" style="width:100%">
-        <img class="mySlides" src="Zdjecia/legoland.jpg" style="width:100%">
-        <img class="mySlides" src="Zdjecia/zachod.jpg" style="width:100%">
-        <img class="mySlides" src="Zdjecia/spacerowanko.jpg" style="width:100%">
-        <img class="mySlides" src="Zdjecia/fale.jpg" style="width:100%">
-        <img class="mySlides" src="Zdjecia/krolowa.jpg" style="width:100%">
-        <img class="mySlides" src="Zdjecia/jaskinie.jpg" style="width:100%">
-        <img class="mySlides" src="Zdjecia/lezanko.jpg" style="width:100%">
-        <img class="mySlides" src="Zdjecia/ninjago.jpg" style="width:100%">
+        <img class="mySlides" src="calowanko.jpg" style="width:100%">
+        <img class="mySlides" src="spanko.jpeg" style="width:100%">
+        <img class="mySlides" src="legoland.jpg" style="width:100%">
+        <img class="mySlides" src="zachod.jpg" style="width:100%">
+        <img class="mySlides" src="spacerowanko.jpg" style="width:100%">
+        <img class="mySlides" src="fale.jpg" style="width:100%">
+        <img class="mySlides" src="krolowa.jpg" style="width:100%">
+        <img class="mySlides" src="jaskinie.jpg" style="width:100%">
+        <img class="mySlides" src="lezanko.jpg" style="width:100%">
+        <img class="mySlides" src="ninjago.jpg" style="width:100%">
     </div>
-    <p>Cały Twój ,zawsze Twój i tylko Twój</p>
+    <p>Cały Twój, zawsze Twój i tylko Twój</p>
     <p>Filipek 💜</p>
   </div>
 
