--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="front-page" id="frontPage" onclick="openCard()">
-    <img src="tloTekst.png" class="tlo">
+    <img src="/tloTekst.png" class="tlo">
 </div>
 
   <div class="card" id="card" style="display: none;" onclick="closeCard()">
@@ -24,16 +24,16 @@
     <br>
     
     <div class="zjecia">
-        <img class="mySlides" src="calowanko.jpg" style="width:100%">
-        <img class="mySlides" src="spanko.jpeg" style="width:100%">
-        <img class="mySlides" src="legoland.jpg" style="width:100%">
-        <img class="mySlides" src="zachod.jpg" style="width:100%">
-        <img class="mySlides" src="spacerowanko.jpg" style="width:100%">
-        <img class="mySlides" src="fale.jpg" style="width:100%">
-        <img class="mySlides" src="krolowa.jpg" style="width:100%">
-        <img class="mySlides" src="jaskinie.jpg" style="width:100%">
-        <img class="mySlides" src="lezanko.jpg" style="width:100%">
-        <img class="mySlides" src="ninjago.jpg" style="width:100%">
+        <img class="mySlides" src="/calowanko.jpg" style="width:100%">
+        <img class="mySlides" src="/spanko.jpeg" style="width:100%">
+        <img class="mySlides" src="/legoland.jpg" style="width:100%">
+        <img class="mySlides" src="/zachod.jpg" style="width:100%">
+        <img class="mySlides" src="/spacerowanko.jpg" style="width:100%">
+        <img class="mySlides" src="/fale.jpg" style="width:100%">
+        <img class="mySlides" src="/krolowa.jpg" style="width:100%">
+        <img class="mySlides" src="/jaskinie.jpg" style="width:100%">
+        <img class="mySlides" src="/lezanko.jpg" style="width:100%">
+        <img class="mySlides" src="/ninjago.jpg" style="width:100%">
     </div>
     <p>Cały Twój, zawsze Twój i tylko Twój</p>
     <p>Filipek 💜</p>
